--- a/LearnToCode/Components/Pages/Account/Login.razor
+++ b/LearnToCode/Components/Pages/Account/Login.razor
@@ -15,7 +15,7 @@
             </div>
             <div class="mb-3">
                 <label>Password</label>
-                <InputText @bind-Value="Model.Password" class="form-control" placeholder="Password" />
+                <InputText @bind-Value="Model.Password" class="form-control" type="password" placeholder="Password" />
             </div>
             <div class="mb-3 text-center">
                 <span class="text-danger">@errorMessage</span>
