--- a/LearnToCode/Components/Pages/Home.razor
+++ b/LearnToCode/Components/Pages/Home.razor
@@ -2,6 +2,7 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1 class="text-4xl font-extrabold">Hello, world!</h1>
 
 Welcome to your new app.
+
