--- a/LearnToCode/Components/Layout/MainLayout.razor
+++ b/LearnToCode/Components/Layout/MainLayout.razor
@@ -1,28 +1,19 @@
 ﻿@inherits LayoutComponentBase
 
 <div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
-
     <main>
-        <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+        <div>
             <AuthorizeView>
                 <NotAuthorized>
-                    <a href="/Login">
-                        Login
-                    </a>
+                    <NavMenu></NavMenu>
                 </NotAuthorized>
                 <Authorized>
-                    <a href="/logout">
-                        Logout
-                    </a>
+                    <Sidebar></Sidebar>
                 </Authorized>
             </AuthorizeView>
         </div>
 
-        <article class="content px-4">
+        <article>
             @Body
         </article>
     </main>
