--- a/LearnToCode/wwwroot/css/app.css
+++ b/LearnToCode/wwwroot/css/app.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 html, body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 
 a, .btn-link {
