--- a/LearnToCode/Components/Layout/MainLayout.razor
+++ b/LearnToCode/Components/Layout/MainLayout.razor
@@ -19,7 +19,7 @@
     </main>
 </div>
 
-<div id="blazor-error-ui">
+<div id="blazor-error-ui" class="hidden">
     An unhandled error has occurred.
     <a href="" class="reload">Reload</a>
     <a class="dismiss">🗙</a>
