--- a/LearnToCode/Components/_Imports.razor
+++ b/LearnToCode/Components/_Imports.razor
@@ -6,9 +6,9 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using LearnToCode
-@using LearnToCode.Components
-@using LearnToCode.Data
+@using DeveloperHub
+@using DeveloperHub.Components
+@using DeveloperHub.Data
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Authorization
 @inject AppDbContext appDbContext
