--- a/LearnToCode/Components/App.razor
+++ b/LearnToCode/Components/App.razor
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="/" />
     <link rel="stylesheet" href="css/app.css" />
-    <link rel="stylesheet" href="LearnToCode.styles.css" />
+    <link rel="stylesheet" href="DeveloperHub.styles.css" />
     <link rel="stylesheet" href="css/site.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <HeadOutlet />
