Updated Database to add user profile pictures

--- a/LearnToCode/Components/Layout/Sidebar.razor
+++ b/LearnToCode/Components/Layout/Sidebar.razor
@@ -1,6 +1,6 @@
 ﻿<aside class="flex flex-col w-64 h-screen px-4 py-8 overflow-y-auto bg-white border-r rtl:border-r-0 rtl:border-l dark:bg-gray-900 dark:border-gray-700">
     <a href="#">
-        <img class="w-auto h-6 sm:h-7" src="https://merakiui.com/images/logo.svg" alt="">
+        <img class="w-auto h-16 sm:h-7" src="/Images/LogoLightTheme.png" alt="">
     </a>
 
     <div class="relative mt-6">
