--- a/LearnToCode/Components/Pages/Home.razor
+++ b/LearnToCode/Components/Pages/Home.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 
 <PageTitle>Home</PageTitle>
-
+<NavMenu />
 <div class="bg-white">
     <div class="relative isolate px-6 pt-14 lg:px-8">
         <div class="absolute inset-x-0 -top-40 -z-10 transform-gpu overflow-hidden blur-3xl sm:-top-80" aria-hidden="true">
@@ -10,12 +10,12 @@
         <div class="mx-auto max-w-2xl py-32 sm:py-48 lg:py-56">
             <div class="hidden sm:mb-8 sm:flex sm:justify-center">
                 <div class="relative rounded-full px-3 py-1 text-sm leading-6 text-gray-600 ring-1 ring-gray-900/10 hover:ring-gray-900/20">
-                    Announcing our next round of funding. <a href="#" class="font-semibold text-indigo-600"><span class="absolute inset-0" aria-hidden="true"></span>Read more <span aria-hidden="true">&rarr;</span></a>
+                    Announcing our new Calendar! <a href="#" class="font-semibold text-indigo-600"><span class="absolute inset-0" aria-hidden="true"></span>Read more <span aria-hidden="true">&rarr;</span></a>
                 </div>
             </div>
             <div class="text-center">
-                <h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Data to enrich your online business</h1>
-                <p class="mt-6 text-lg leading-8 text-gray-600">Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo. Elit sunt amet fugiat veniam occaecat fugiat aliqua.</p>
+                <h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">The Developer Hub</h1>
+                <p class="mt-6 text-lg leading-8 text-gray-600">The one-stop shop for everything a developer needs. From forums to tutorials and much, much more...</p>
                 <div class="mt-10 flex items-center justify-center gap-x-6">
                     <a href="#" class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Get started</a>
                     <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Learn more <span aria-hidden="true">→</span></a>
@@ -38,54 +38,29 @@
     </div>
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
         <div class="mx-auto max-w-2xl lg:mx-0">
-            <h2 class="text-4xl font-bold tracking-tight text-white sm:text-6xl">Work with us</h2>
-            <p class="mt-6 text-lg leading-8 text-gray-300">Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo. Elit sunt amet fugiat veniam occaecat fugiat aliqua.</p>
+            <h2 class="text-4xl font-bold tracking-tight text-white sm:text-6xl">What is The Developer Hub</h2>
+            <p class="mt-6 text-lg leading-8 text-gray-300">The Developer Hub is a collection of useful tools and functionality that are helpful for every developer.</p>
         </div>
         <div class="mx-auto mt-10 max-w-2xl lg:mx-0 lg:max-w-none">
-            <div class="grid grid-cols-1 gap-x-8 gap-y-6 text-base font-semibold leading-7 text-white sm:grid-cols-2 md:flex lg:gap-x-10">
-                <a href="#">Open roles <span aria-hidden="true">&rarr;</span></a>
-                <a href="#">Internship program <span aria-hidden="true">&rarr;</span></a>
-                <a href="#">Our values <span aria-hidden="true">&rarr;</span></a>
-                <a href="#">Meet our leadership <span aria-hidden="true">&rarr;</span></a>
-            </div>
             <dl class="mt-16 grid grid-cols-1 gap-8 sm:mt-20 sm:grid-cols-2 lg:grid-cols-4">
                 <div class="flex flex-col-reverse">
-                    <dt class="text-base leading-7 text-gray-300">Offices worldwide</dt>
-                    <dd class="text-2xl font-bold leading-9 tracking-tight text-white">12</dd>
+                    <dt class="text-base leading-7 text-gray-300">Tutorials</dt>
+                    <dd class="text-2xl font-bold leading-9 tracking-tight text-white">15+</dd>
                 </div>
                 <div class="flex flex-col-reverse">
-                    <dt class="text-base leading-7 text-gray-300">Full-time colleagues</dt>
-                    <dd class="text-2xl font-bold leading-9 tracking-tight text-white">300+</dd>
+                    <dt class="text-base leading-7 text-gray-300">Applications</dt>
+                    <dd class="text-2xl font-bold leading-9 tracking-tight text-white">10+</dd>
                 </div>
                 <div class="flex flex-col-reverse">
-                    <dt class="text-base leading-7 text-gray-300">Hours per week</dt>
-                    <dd class="text-2xl font-bold leading-9 tracking-tight text-white">40</dd>
+                    <dt class="text-base leading-7 text-gray-300">Lines of code</dt>
+                    <dd class="text-2xl font-bold leading-9 tracking-tight text-white">100,000+</dd>
                 </div>
                 <div class="flex flex-col-reverse">
-                    <dt class="text-base leading-7 text-gray-300">Paid time off</dt>
+                    <dt class="text-base leading-7 text-gray-300">Hours saved</dt>
                     <dd class="text-2xl font-bold leading-9 tracking-tight text-white">Unlimited</dd>
                 </div>
             </dl>
         </div>
-    </div>
-</div>
-
-<div class="bg-white py-24 sm:py-32">
-    <div class="mx-auto max-w-7xl px-6 lg:px-8">
-        <dl class="grid grid-cols-1 gap-x-8 gap-y-16 text-center lg:grid-cols-3">
-            <div class="mx-auto flex max-w-xs flex-col gap-y-4">
-                <dt class="text-base leading-7 text-gray-600">Transactions every 24 hours</dt>
-                <dd class="order-first text-3xl font-semibold tracking-tight text-gray-900 sm:text-5xl">44 million</dd>
-            </div>
-            <div class="mx-auto flex max-w-xs flex-col gap-y-4">
-                <dt class="text-base leading-7 text-gray-600">Assets under holding</dt>
-                <dd class="order-first text-3xl font-semibold tracking-tight text-gray-900 sm:text-5xl">$119 trillion</dd>
-            </div>
-            <div class="mx-auto flex max-w-xs flex-col gap-y-4">
-                <dt class="text-base leading-7 text-gray-600">New users annually</dt>
-                <dd class="order-first text-3xl font-semibold tracking-tight text-gray-900 sm:text-5xl">46,000</dd>
-            </div>
-        </dl>
     </div>
 </div>
 
@@ -210,7 +185,7 @@
                     <button type="button" class="bg-gray-200 flex w-8 flex-none cursor-pointer rounded-full p-px ring-1 ring-inset ring-gray-900/5 transition-colors duration-200 ease-in-out focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600" role="switch" aria-checked="false" aria-labelledby="switch-1-label">
                         <span class="sr-only">Agree to policies</span>
                         <!-- Enabled: "translate-x-3.5", Not Enabled: "translate-x-0" -->
-                        <span aria-hidden="true" class="translate-x-0 h-4 w-4 transform rounded-full bg-white shadow-sm ring-1 ring-gray-900/5 transition duration-200 ease-in-out"></span>
+                        <span aria-hidden="true" class="translate-x-0 enabled:translate-x-3.5 h-4 w-4 transform rounded-full bg-white shadow-sm ring-1 ring-gray-900/5 transition duration-200 ease-in-out"></span>
                     </button>
                 </div>
                 <label class="text-sm leading-6 text-gray-600" id="switch-1-label">
