--- a/LearnToCode/Components/_Imports.razor
+++ b/LearnToCode/Components/_Imports.razor
@@ -11,5 +11,6 @@
 @using DeveloperHub.Data
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Authorization
+@using DeveloperHub.Components.Layout
 @inject AppDbContext appDbContext
 @inject NavigationManager navigationManager
