Started creating account page

--- a/LearnToCode/Components/Layout/MainLayout.razor
+++ b/LearnToCode/Components/Layout/MainLayout.razor
@@ -1,8 +1,10 @@
 ﻿@inherits LayoutComponentBase
 
+<AntiforgeryToken />
+
 <div class="page">
     <main>
-        <article>
+        <article class="relative">
             @Body
         </article>
     </main>
