--- a/LearnToCode/Components/Pages/Home.razor
+++ b/LearnToCode/Components/Pages/Home.razor
@@ -43,19 +43,19 @@
         </div>
         <div class="mx-auto mt-10 max-w-2xl lg:mx-0 lg:max-w-none">
             <dl class="mt-16 grid grid-cols-1 gap-8 sm:mt-20 sm:grid-cols-2 lg:grid-cols-4">
-                <div class="flex flex-col-reverse">
+                <div class="flex flex-col-reverse justify-center items-center">
                     <dt class="text-base leading-7 text-gray-300">Tutorials</dt>
                     <dd class="text-2xl font-bold leading-9 tracking-tight text-white">15+</dd>
                 </div>
-                <div class="flex flex-col-reverse">
+                <div class="flex flex-col-reverse justify-center items-center">
                     <dt class="text-base leading-7 text-gray-300">Applications</dt>
                     <dd class="text-2xl font-bold leading-9 tracking-tight text-white">10+</dd>
                 </div>
-                <div class="flex flex-col-reverse">
+                <div class="flex flex-col-reverse justify-center items-center">
                     <dt class="text-base leading-7 text-gray-300">Lines of code</dt>
                     <dd class="text-2xl font-bold leading-9 tracking-tight text-white">100,000+</dd>
                 </div>
-                <div class="flex flex-col-reverse">
+                <div class="flex flex-col-reverse justify-center items-center">
                     <dt class="text-base leading-7 text-gray-300">Hours saved</dt>
                     <dd class="text-2xl font-bold leading-9 tracking-tight text-white">Unlimited</dd>
                 </div>
@@ -67,9 +67,9 @@
 <div class="bg-white py-24 sm:py-32">
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
         <div class="mx-auto max-w-2xl lg:text-center">
-            <h2 class="text-base font-semibold leading-7 text-indigo-600">Deploy faster</h2>
-            <p class="mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Everything you need to deploy your app</p>
-            <p class="mt-6 text-lg leading-8 text-gray-600">Quis tellus eget adipiscing convallis sit sit eget aliquet quis. Suspendisse eget egestas a elementum pulvinar et feugiat blandit at. In mi viverra elit nunc.</p>
+            <h2 class="text-base font-semibold leading-7 text-indigo-600">Work Faster</h2>
+            <p class="mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Everything you need to be a developer</p>
+            <p class="mt-6 text-lg leading-8 text-gray-600">Ranging from built in calendar and scheduler, to tutorials and a built-in forum. With lots of tutorials you are sure to find everything you need at our one-stop shop.</p>
         </div>
         <div class="mx-auto mt-16 max-w-2xl sm:mt-20 lg:mt-24 lg:max-w-4xl">
             <dl class="grid max-w-xl grid-cols-1 gap-x-8 gap-y-10 lg:max-w-none lg:grid-cols-2 lg:gap-y-16">
@@ -80,9 +80,9 @@
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M12 16.5V9.75m0 0l3 3m-3-3l-3 3M6.75 19.5a4.5 4.5 0 01-1.41-8.775 5.25 5.25 0 0110.233-2.33 3 3 0 013.758 3.848A3.752 3.752 0 0118 19.5H6.75z" />
                             </svg>
                         </div>
-                        Push to deploy
+                        Schedule Management
                     </dt>
-                    <dd class="mt-2 text-base leading-7 text-gray-600">Morbi viverra dui mi arcu sed. Tellus semper adipiscing suspendisse semper morbi. Odio urna massa nunc massa.</dd>
+                    <dd class="mt-2 text-base leading-7 text-gray-600">Manage your schedule effectively with our built-in scheduling feature. Keep track of your appointments, meetings, and deadlines.</dd>
                 </div>
                 <div class="relative pl-16">
                     <dt class="text-base font-semibold leading-7 text-gray-900">
@@ -91,9 +91,9 @@
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M16.5 10.5V6.75a4.5 4.5 0 10-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 002.25-2.25v-6.75a2.25 2.25 0 00-2.25-2.25H6.75a2.25 2.25 0 00-2.25 2.25v6.75a2.25 2.25 0 002.25 2.25z" />
                             </svg>
                         </div>
-                        SSL certificates
+                        Interactive Tutorials
                     </dt>
-                    <dd class="mt-2 text-base leading-7 text-gray-600">Sit quis amet rutrum tellus ullamcorper ultricies libero dolor eget. Sem sodales gravida quam turpis enim lacus amet.</dd>
+                    <dd class="mt-2 text-base leading-7 text-gray-600">Learn new skills and concepts through our interactive tutorials. Get hands-on experience and practice coding in real-time.</dd>
                 </div>
                 <div class="relative pl-16">
                     <dt class="text-base font-semibold leading-7 text-gray-900">
@@ -102,9 +102,9 @@
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0l3.181 3.183a8.25 8.25 0 0013.803-3.7M4.031 9.865a8.25 8.25 0 0113.803-3.7l3.181 3.182m0-4.991v4.99" />
                             </svg>
                         </div>
-                        Simple queues
+                        Community Forums
                     </dt>
-                    <dd class="mt-2 text-base leading-7 text-gray-600">Quisque est vel vulputate cursus. Risus proin diam nunc commodo. Lobortis auctor congue commodo diam neque.</dd>
+                    <dd class="mt-2 text-base leading-7 text-gray-600">Connect with other developers in our community forums. Share ideas, ask questions, and collaborate on projects.</dd>
                 </div>
                 <div class="relative pl-16">
                     <dt class="text-base font-semibold leading-7 text-gray-900">
@@ -113,9 +113,9 @@
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M7.864 4.243A7.5 7.5 0 0119.5 10.5c0 2.92-.556 5.709-1.568 8.268M5.742 6.364A7.465 7.465 0 004.5 10.5a7.464 7.464 0 01-1.15 3.993m1.989 3.559A11.209 11.209 0 008.25 10.5a3.75 3.75 0 117.5 0c0 .527-.021 1.049-.064 1.565M12 10.5a14.94 14.94 0 01-3.6 9.75m6.633-4.596a18.666 18.666 0 01-2.485 5.33" />
                             </svg>
                         </div>
-                        Advanced security
+                        More Features Coming Soon
                     </dt>
-                    <dd class="mt-2 text-base leading-7 text-gray-600">Arcu egestas dolor vel iaculis in ipsum mauris. Tincidunt mattis aliquet hac quis. Id hac maecenas ac donec pharetra eget.</dd>
+                    <dd class="mt-2 text-base leading-7 text-gray-600">Stay tuned for more exciting features and updates. We are constantly working to enhance your developer experience.</dd>
                 </div>
             </dl>
         </div>
@@ -127,8 +127,8 @@
         <div class="relative left-1/2 -z-10 aspect-[1155/678] w-[36.125rem] max-w-none -translate-x-1/2 rotate-[30deg] bg-gradient-to-tr from-[#ff80b5] to-[#9089fc] opacity-30 sm:left-[calc(50%-40rem)] sm:w-[72.1875rem]" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
     </div>
     <div class="mx-auto max-w-2xl text-center">
-        <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Contact sales</h2>
-        <p class="mt-2 text-lg leading-8 text-gray-600">Aute magna irure deserunt veniam aliqua magna enim voluptate.</p>
+        <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Contact</h2>
+        <p class="mt-2 text-lg leading-8 text-gray-600">Have a suggestion or query, don't hesitate to ask.</p>
     </div>
     <form action="#" method="POST" class="mx-auto mt-16 max-w-xl sm:mt-20">
         <div class="grid grid-cols-1 gap-x-8 gap-y-6 sm:grid-cols-2">
